--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "express-mongo-sanitize": "^2.0.0",
     "express-session": "^1.17.1",
     "helmet": "^4.1.1",
+    "helmet-csp": "^3.4.0",
     "joi": "^17.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.4",
